[package]
name = "scheme-rs"
version = "0.0.1"
edition = "2021"
license = "MIT"
homepage = "https://vishpat.github.io/scheme-rs"
repository = "https://github.com/vishpat/scheme-rs"
documentation = "https://vishpat.github.io/scheme-rs"
description = """
Lisp interpreter + compiler in Rust
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
env_logger = "0.9.0"
linefeed = "0.6.0"
inkwell = { git = "https://github.com/TheDan64/inkwell", tag = "0.2.0", features = ["llvm15-0"] }
